--- a/week03/styles.css
+++ b/week03/styles.css
@@ -5,4 +5,7 @@ body {
   color: black;
   line-height: 140%;
   margin: 30px;
+  background-image: url("page-bg.gif");
+  background-repeat: no-repeat;
+  
   }
