--- a/week03/styles.css
+++ b/week03/styles.css
@@ -18,4 +18,6 @@ body {
   padding: 40px;
   padding-left: 120px;
   background-image: url("header-image-1.gif");
+  background-position: left top;
+  background-repeat: no-repeat;
   }
