--- a/week03/styles.css
+++ b/week03/styles.css
@@ -37,3 +37,30 @@ padding: 0;
 list-style-type: none;
 color: #7C1A00;
 }
+
+nav li {
+  margin: 10px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #7C1A00;
+  background-color: #FFE597;
+}
+
+nav a {
+  color: white;
+  background-color: #8C9273;
+  padding: 3px;
+  padding-right: 60px;
+  text-decoration: none;
+}
+
+nav a:hover {
+  background-color: #7C1A00;
+}
+
+#content {
+  background-image: url("trans-bg.gif");
+  border: 1px solid #CCCCCC;
+  margin-left: 180px;
+  padding: 10px;
+}
