--- a/week03/styles.css
+++ b/week03/styles.css
@@ -64,3 +64,23 @@ nav a:hover {
   margin-left: 180px;
   padding: 10px;
 }
+
+footer {
+  clear: both;
+  text-align: center;
+}
+
+footer li {
+  display: inline;
+  padding: 10px;
+}
+
+global h1 {
+  color: #8C9273;
+}
+
+global h2 {
+  border-left: 20px solid #8C9273;
+  border-bottom: 5px solid #8C9273;
+  padding-left: 5px;
+}
