--- a/week03/styles.css
+++ b/week03/styles.css
@@ -75,11 +75,11 @@ footer li {
   padding: 10px;
 }
 
-global h1 {
+h1 {
   color: #8C9273;
 }
 
-global h2 {
+h2 {
   border-left: 20px solid #8C9273;
   border-bottom: 5px solid #8C9273;
   padding-left: 5px;
