--- a/week03/styles.css
+++ b/week03/styles.css
@@ -84,3 +84,13 @@ h2 {
   border-bottom: 5px solid #8C9273;
   padding-left: 5px;
 }
+
+h3 {
+  background-image: url("header-star-1.gif");
+  background-repeat: no-repeat;
+  padding-left: 20px;
+}
+
+blockquote {
+  background-color: #FFE597;
+}
