--- a/week03/styles.css
+++ b/week03/styles.css
@@ -94,3 +94,16 @@ h3 {
 blockquote {
   background-color: #FFE597;
 }
+
+ul {
+  list-style-type: square;
+}
+
+a {
+  color: #7C1A00;
+  font-weight: bold;
+}
+
+a:hover {
+  background-color: #FFE597;
+}
