--- a/random/hb.css
+++ b/random/hb.css
@@ -8,13 +8,13 @@ h1{
   font-size: 300%;
   text-align: center;
   color: white;
-  font-family: "Lucida Handwriting";
+  font-family: "cursive";
 }
 h2{
   font-size: 300%;
   text-align: center;
   color: white;
-  font-family: "Lucida Handwriting"
+  font-family: "cursive"
 }
 body1{
   font-size: 100%;
