--- a/birthday/birthday.css
+++ b/birthday/birthday.css
@@ -73,7 +73,7 @@ body {
 }
 
 .plate {
-  position: absolute;
+  position: relative;
   width: 130px;
   height: 5px;
   background-color: #00bbf9;
@@ -82,7 +82,7 @@ body {
 }
 
 .cake {
-  position: absolute;
+  position: relative;
   overflow: hidden;
   width:100px;
   height: 50px;
@@ -95,7 +95,7 @@ body {
 
 .cake:before {
   content:"";
-  position: absolute;
+  position: relative;
   background-color: #432818;
   width:10px;
   height:20px;
@@ -106,7 +106,7 @@ body {
 
 .plate:before {
   content:"";
-  position: absolute;
+  position: relative;
   background: repeating-linear-gradient(-45deg, #9b5de5, #9b5de5 3px, #00f5d4 3px, #00f5d4 6px);
   width:7px;
   height: 25px;
@@ -116,7 +116,7 @@ body {
 
 .plate:after {
   content:"";
-  position: absolute;
+  position: relative;
   width:1px;
   height: 5px;
   background-color: #333;
@@ -124,9 +124,14 @@ body {
   left:64px;
 }
 
-
 .flame {
-  position: absolute;
+  position: relative;
+  opacity:0.7;
+}
+
+.flame:before {
+  content:"";
+  position: relative;
   background-color: #fb5607;
   border-radius: 80% 0 55% 50% / 55% 0 80% 50%;
   transform: rotate(-45deg);
@@ -135,6 +140,112 @@ body {
   opacity:0.7;
   top:-93px;
   left:57px;
+  animation: scale .5s linear infinite;
+}
+
+.flame:after {
+  content:"";
+  position: absolute;
+  border-radius: 50%;
+  background-color: #ffbe0b;
+  width: 11px;
+  height: 11px;
+  top:61px;
+  left:187.5px;
+  animation: scale .5s linear infinite;
+}
+
+@keyframes scale {
+  0% {transform: scaleY(1) rotate(-45deg);}
+  25% {transform: scaleY(1.3) rotate(-45deg);}
+  50% {transform: scaleY(1) rotate(-45deg);}
+  75% {transform: scaleY(1.3) rotate(-45deg);}
+  100% {transform: scaleY(1) rotate(-45deg);}
+}
+
+.confetti {
+  position: absolute;
+  width: 380px;
+  height: 380px;
+  overflow: hidden;
+}
+
+.squareOne, .squareTwo, .squareThree, .squareFour, .squareFive, .squareSix, .squareSeven, .squareEight, .squareNine, .squareTen {
+  position: absolute;
+  width: 10px;
+  height: 25px;
+  top:-110px;
+}
+
+.squareOne {
+  background-color: #ef476f;
+  animation: down 2.5s linear infinite;
+  left:50px;
+}
+
+.squareTwo {
+  background-color: #06d6a0;
+  animation: down 2.3s linear infinite .2s;
+  left:150px;
+}
+
+.squareThree {
+  background-color: #118ab2;
+  animation: down 2.4s linear infinite .4s;
+  left:250px;
+}
+
+.squareFour {
+  background-color: #ffbe0b;
+  animation: down 2.7s linear infinite .1s;
+  left:300px;
+}
+
+.squareFive {
+  background-color: #118ab2;
+  animation: down 2.6s linear infinite .7s;
+  left:5px;
+}
+
+@keyframes down {
+  0% {top:-110px; transform: rotate(0deg) rotateY(-90deg);opacity:1;}
+  100% {top:400px; transform: rotate(360deg) rotateY(180deg);opacity:0.5;}
+}
+
+@keyframes downTwo {
+  0% {top:-130px; transform: rotate(0deg) rotateY(90deg);opacity:1;}
+  100% {top:400px; transform: rotate(-360deg) rotateY(-180deg);opacity:0.5;}
+}
+
+
+.squareSix {
+  background-color: #ffbe0b;
+  animation: downTwo 2.4s linear infinite .2s;
+  left:70px;
+}
+
+.squareSeven {
+  background-color: #ef476f;
+  animation: downTwo 2.1s linear infinite .7s;
+  left:170px;
+}
+
+.squareEight {
+  background-color: #ef476f;
+  animation: downTwo 2.4s linear infinite .9s;
+  left:280px;
+}
+
+.squareNine {
+  background-color: #06d6a0;
+  animation: downTwo 2.9s linear infinite .9s;
+  left:50px;
+}
+
+.squareTen {
+  background-color: #118ab2;
+  animation: downTwo 2.2s linear infinite 1.1s;
+  left:350px;
 }
 
 .cardInside {
