--- a/birthday/birthday.css
+++ b/birthday/birthday.css
@@ -73,7 +73,7 @@ body {
 }
 
 .plate {
-  position: relative;
+  position: center;
   width: 130px;
   height: 5px;
   background-color: #00bbf9;
@@ -82,7 +82,7 @@ body {
 }
 
 .cake {
-  position: relative;
+  position: center;
   overflow: hidden;
   width:100px;
   height: 50px;
@@ -95,7 +95,7 @@ body {
 
 .cake:before {
   content:"";
-  position: relative;
+  position: center;
   background-color: #432818;
   width:10px;
   height:20px;
@@ -106,7 +106,7 @@ body {
 
 .plate:before {
   content:"";
-  position: relative;
+  position: center;
   background: repeating-linear-gradient(-45deg, #9b5de5, #9b5de5 3px, #00f5d4 3px, #00f5d4 6px);
   width:7px;
   height: 25px;
@@ -116,7 +116,7 @@ body {
 
 .plate:after {
   content:"";
-  position: relative;
+  position: center;
   width:1px;
   height: 5px;
   background-color: #333;
@@ -125,13 +125,7 @@ body {
 }
 
 .flame {
-  position: relative;
-  opacity:0.7;
-}
-
-.flame:before {
-  content:"";
-  position: relative;
+  position: center;
   background-color: #fb5607;
   border-radius: 80% 0 55% 50% / 55% 0 80% 50%;
   transform: rotate(-45deg);
@@ -140,27 +134,6 @@ body {
   opacity:0.7;
   top:-93px;
   left:57px;
-  animation: scale .5s linear infinite;
-}
-
-.flame:after {
-  content:"";
-  position: absolute;
-  border-radius: 50%;
-  background-color: #ffbe0b;
-  width: 11px;
-  height: 11px;
-  top:61px;
-  left:187.5px;
-  animation: scale .5s linear infinite;
-}
-
-@keyframes scale {
-  0% {transform: scaleY(1) rotate(-45deg);}
-  25% {transform: scaleY(1.3) rotate(-45deg);}
-  50% {transform: scaleY(1) rotate(-45deg);}
-  75% {transform: scaleY(1.3) rotate(-45deg);}
-  100% {transform: scaleY(1) rotate(-45deg);}
 }
 
 .confetti {
