--- a/birthday/birthday.css
+++ b/birthday/birthday.css
@@ -5,7 +5,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height:300vh;
+  height:100vh;
   background-color: white;
 }
 
@@ -53,6 +53,7 @@ body {
   font-family: didot;
   text-align: center;
   backface-visibility: hidden;
+  color: #333;
   font-size: 60px; 
 }
 
@@ -61,7 +62,7 @@ body {
 }
 
 .toyou {
-  top:160px;
+  top:140px;
 }
 
 .bday {
@@ -69,6 +70,7 @@ body {
   font-family: arial;
   font-size: 35px;
   text-align: center;
+  color: #333;
   top:163px;
 }
 
@@ -77,8 +79,8 @@ body {
   width: 130px;
   height: 5px;
   background-color: #00bbf9;
-  left:60px;
-  top:213px;
+  left:160px;
+  top:200px;
 }
 
 .cake {
@@ -119,14 +121,14 @@ body {
   position: absolute;
   width:1px;
   height: 5px;
-  background-color: #333;
+  background-color: #fff;
   top:-80px;
   left:64px;
 }
 
 
 .flame {
-  position: center;
+  position: absolute;
   background-color: #fb5607;
   border-radius: 80% 0 55% 50% / 55% 0 80% 50%;
   transform: rotate(-45deg);
@@ -137,93 +139,8 @@ body {
   left:57px;
 }
 
-.confetti {
-  position: absolute;
-  width: 380px;
-  height: 380px;
-  overflow: hidden;
-}
-
-.squareOne, .squareTwo, .squareThree, .squareFour, .squareFive, .squareSix, .squareSeven, .squareEight, .squareNine, .squareTen {
-  position: absolute;
-  width: 10px;
-  height: 25px;
-  top:-110px;
-}
-
-.squareOne {
-  background-color: #ef476f;
-  animation: down 2.5s linear infinite;
-  left:50px;
-}
-
-.squareTwo {
-  background-color: #06d6a0;
-  animation: down 2.3s linear infinite .2s;
-  left:150px;
-}
-
-.squareThree {
-  background-color: #118ab2;
-  animation: down 2.4s linear infinite .4s;
-  left:250px;
-}
-
-.squareFour {
-  background-color: #ffbe0b;
-  animation: down 2.7s linear infinite .1s;
-  left:300px;
-}
-
-.squareFive {
-  background-color: #118ab2;
-  animation: down 2.6s linear infinite .7s;
-  left:5px;
-}
-
-@keyframes down {
-  0% {top:-110px; transform: rotate(0deg) rotateY(-90deg);opacity:1;}
-  100% {top:400px; transform: rotate(360deg) rotateY(180deg);opacity:0.5;}
-}
-
-@keyframes downTwo {
-  0% {top:-130px; transform: rotate(0deg) rotateY(90deg);opacity:1;}
-  100% {top:400px; transform: rotate(-360deg) rotateY(-180deg);opacity:0.5;}
-}
-
-
-.squareSix {
-  background-color: #ffbe0b;
-  animation: downTwo 2.4s linear infinite .2s;
-  left:70px;
-}
-
-.squareSeven {
-  background-color: #ef476f;
-  animation: downTwo 2.1s linear infinite .7s;
-  left:170px;
-}
-
-.squareEight {
-  background-color: #ef476f;
-  animation: downTwo 2.4s linear infinite .9s;
-  left:280px;
-}
-
-.squareNine {
-  background-color: #06d6a0;
-  animation: downTwo 2.9s linear infinite .9s;
-  left:50px;
-}
-
-.squareTen {
-  background-color: #118ab2;
-  animation: downTwo 2.2s linear infinite 1.1s;
-  left:350px;
-}
-
 .cardInside {
-  position: absolute;
+  position: absolute;62950
   background-color: #fff;
   width: 450px;
   height:650px;
