--- a/birthday/style.css
+++ b/birthday/style.css
@@ -10,7 +10,7 @@ h1 {
 body {
   height: 100vh;
   width: 100vw;
-  background: ##fe4646;
+  background: #fe4646;
   font-family: "Pangolin", cursive;
   font-size: 1vmin;
   display: flex;
