--- a/birthday/birthday.css
+++ b/birthday/birthday.css
@@ -53,7 +53,7 @@ body {
   font-family: didot;
   text-align: center;
   backface-visibility: hidden;
-  color: #333;
+  color: #285bde;
   font-size: 60px; 
 }
 
@@ -68,9 +68,9 @@ body {
 .bday {
   position: relative;
   font-family: arial;
-  font-size: 40px;
+  font-size: 60px;
   text-align: center;
-  color: #333;
+  color: #285bde;
   top:163px;
 }
 
@@ -164,7 +164,7 @@ body {
 
 p {
   font-family: 'Courier New', monospace;
-  color: #333;
+  color: #285bde;
 }
 
 .name {
